# LoopLearner

./: .claudeignore  .gitignore  CLAUDE.md  EVALUATION_REQUIREMENTS.md  LLM_EVALUATION_BEST_PRACTICES.md  PROMPT_OPTIMIZATION_IMPLEMENTATION.md  README.md  REQUIREMENTS.md  TESTING_TRIPLE_BRACE_REGRESSION.md
backend/: .env.example  LLM_PROVIDER_GUIDE.md  README.md  conftest.py  db.sqlite3  main.py  manage.py  pyproject.toml  pytest.ini  test_api_endpoints.py  test_convergence_integration.py  test_draft_case_system.py  test_draft_generation.py  test_evaluation_run_api.py  test_ollama_integration.py  test_ollama_simple.py  test_promptlab_api.py  test_unified_llm.py
backend/app/: main.py
backend/core/: models.py  serializers.py  urls.py  views.py
backend/frontend/: README.md  pnpm-lock.yaml
backend/looplearner/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: EVALUATION_CASE_TEST_SUMMARY.md  test_api_controllers.py  test_api_endpoints.py  test_automated_optimization.py  test_automated_optimization_api.py  test_case_generation_api.py  test_cold_start_system.py  test_compute_optimization.py  test_confidence_tracking.py  test_convergence_detection.py  test_dashboard_controller.py  test_dataset_optimization.py  test_dataset_optimization_integration.py  test_demo_workflow.py  test_dual_llm_coordinator.py  test_email_generator.py  test_evaluation_case_crud.py  test_evaluation_case_integration.py  test_evaluation_dataset.py  test_evaluation_dataset_migration.py  test_evaluation_engine.py  test_evaluation_execution.py  test_evaluation_generator.py  test_evaluation_generator_new.py  test_evaluation_models.py  test_feedback_api_reasoning.py  test_feedback_real_functions.py  test_human_feedback_integrator.py  test_human_in_loop_integration.py  test_import_functionality.py  test_improved_case_generation.py  test_learning_pipeline.py  test_llm_provider.py  test_log_probabilities.py  test_manual_optimization_trigger.py  test_meta_prompt_manager.py  (+20 more)
(+140 files in other folders)
