[project]
name = "loop-learner-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.82.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
