[project]
name = "loop-learner-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "fastapi>=0.115.12",
    "openai>=1.82.0",
    "ollama>=0.4.6",
    "anthropic>=0.40.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.6.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "django-cors-headers>=4.7.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "looplearner.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db --tb=short -n auto --dist=loadgroup"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
